--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Ematv Extension",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Extension for https://abema.tv/",
   "permissions": [
     "activeTab",
@@ -8,9 +8,12 @@
   ],
   "content_scripts": [
     {
-      "matches": ["https://abema.tv/now-on-air/*"],
+      "matches": ["https://abema.tv/*"],
       "run_at": "document_idle",
-      "js": ["on-air.js"]
+      "js": [
+        "main.js",
+        "on-air.js"
+      ]
     }
   ],
   "manifest_version": 2
